minor modfication on UI layout